[package]
name = "librunway"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1-only"
description = "Runway protocol library"

[dependencies]
anyhow = "1.0.102"
ed25519-dalek = "2.2.0"
openmls = "0.8.1"
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.10.9"
tls_codec = "0.4.2"
